[REF] Fix sonar warnings