@@ -12,7 +12,6 @@ import org.springframework.web.server.ResponseStatusException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductImageService implements IProductImageService {
@@ -33,7 +32,7 @@ public class ProductImageService implements IProductImageService {
                     throwExceptionIfImageNameAlreadyExists(getImageFilename(image));
                     return saveProductImage(image);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private ProductImage saveProductImage(MultipartFile multipartFile) {
